--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -6,12 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class and ID Selectors</title>
     <link rel="stylesheet" href="style.css">
+  <style>
+    .oneDiv {
+      background-color: #ffa7a7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif, DejaVu ;
+    }
+  </style>
   </head>
   <body>
+    <div class="oneDiv">
     <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
+    <div id="oneID">Number 2 - I'm one ID.
+    </div>
+    <div class="cooler">
+    <p>Number 3 - I'm a class, but cooler!
+    </p>
+    </div>
+    <div id="anotherID">Number 4 - I'm another ID.
+    </div>
     <p>Number 5 - I'm a class!</p>
-  </body>
+    </div>
+    </body>
 </html>
