Edit index.html with two bottons (bottonMe & bottonNo) with class and create group selector in style.css

--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
-  </body>
+    <button class="bottonMe">Click Me!</button>
+    </div>
+    <button class="bottonNo">No, Click Me!</button>
+    </body>
 </html>
